--- a/samples/service-contract/index.html
+++ b/samples/service-contract/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h2 class="fd-title fd-title--h2" id="info">No selected activities</h2>
+      <h2 class="fd-title fd-title--h2" id="info">Equipment outlet extension working!!</h2>
     </div>
     <script src="https://unpkg.com/fsm-shell"></script>
     <script src="helpers.js"></script>
