--- a/samples/service-contract/index.html
+++ b/samples/service-contract/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class="equipment-outlet">
       <h2 class="fd-title fd-title--h2" id="info">Equipment outlet extension working!!</h2>
     </div>
     <script src="https://unpkg.com/fsm-shell"></script>
