--- a/samples/service-contract/index.html
+++ b/samples/service-contract/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="equipment-outlet">
-      <h2 class="fd-title fd-title--h2" id="info">MDM equipment outlet extension!</h2>
+      <h2 class="fd-title fd-title--h2" id="info">MDM Equipment Outlet Sample Plugin!</h2>
       <p id="selectedEquipmentId"></p>
       <p id="selectedExternalId"></p>
     </div>
